--- a/app/src/main/res/layout/activity_inovasi_detail.xml
+++ b/app/src/main/res/layout/activity_inovasi_detail.xml
@@ -815,7 +815,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_4sdp"
                             android:fontFamily="@font/montserrat_regular"
-                            android:text="Dummy Text"
+                            android:text="-"
                             android:textColor="@color/gray_text"
                             android:textSize="@dimen/_9sdp"
                             app:layout_constraintStart_toStartOf="@id/guideline65"
